# gltf-insight

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build_appimage.sh  imgui.ini  vcsetup.bat
config/: cmake_config.hh.template
data/SimpleSkinning/: README.txt  skinning.gltf
data/skincluster/: skincluster-simple-001.gltf
doc/: jsonrpc.md
fonts/: roboto_embed.inc.h  roboto_light_embed.inc.h
gltf-samples/: test_targets.gltf
icons/: gltf-insight-128.png.inc.hh  gltf-insight-16.png.inc.hh  gltf-insight-256.png.inc.hh  gltf-insight-32.png.inc.hh  gltf-insight-48.png.inc.hh  gltf-insight-64.png.inc.hh  gltf-insight-96.png.inc.hh  gltf-insight.desktop  gltf-insight.png.inc.hh  gltf_insight_png.inc.hh  icons.rc  regen_ico.sh
linux/: gltf-insight.desktop
scripts/: bootstrap-linux.sh  bootstrap-macos-devel.sh
shaders/: base_color_map.frag  bitangent.frag  draw_debug_color.frag  emissive_map.frag  metallic_roughness_map.frag  no_skinning.vert  normal_map.frag  normals.frag  occlusion_map.frag  pbr_metallic_roughness.frag  perturbed_normal.frag  skinning_template.vert  tangents.frag  unlit.frag  uv.frag  vertex_color.frag  weights.frag  world_fragment.frag
src/: animation-sequencer.inc.h  animation.cc  animation.hh  audio.cc  audio.hh  configuration.cpp  configuration.hh  exprtk.hpp  gl_util.cc  gl_util.hh  gltf-graph.cc  gltf-graph.hh  gltf-loader.cc  gltf-loader.hh  gui_util.cc  gui_util.hh  insight-app.cc  insight-app.hh  json-util.cc  json-util.hh  jsonrpc-app.cc  jsonrpc-command.hh  jsonrpc-http.cc  jsonrpc-http.hh  main.cc  material.cc  material.hh  os_utils.cc  os_utils.hh  shader.cc  shader.hh  shader.hpp  tiny_gltf.h  tiny_gltf_util.h  tinyobj-impl.cc  trackball.cc
tools/jsonrpc/: README.md  update_addtive_joint_translation.py  update_joint_rotation.py  update_joint_translation.py  update_morph_weights.py
